Avoid ugly spacing caused by footnotes (`<sup>` elements)

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -64,6 +64,13 @@ img {
   box-shadow: 0 0.1em 0.2em #00000015;
 }
 
+sup {
+  vertical-align: baseline;
+  position: relative;
+  top: -0.4em;
+  line-height: 0;
+}
+
 .footnotes {
   margin-top: 2em;
   font-size: 0.85rem;
